# DjangoDemo

./: README.md  docker-compose-demo.yml  pyproject.toml  requirements.txt  test_and_run.ps1
Demo/: settings.py  urls.py
Demo/utils/: exceptions.py  response_format.py
api/: urls.py  views.py
