[tool.poetry]
name = "health-insight-system-demo"
version = "0.1.0"
description = ""
authors = ["betasecond <nbdhc9039@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
asgiref = "^3.8.1"
django-cors-headers = "^4.6.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
mysqlclient = "^2.2.6"
pyjwt = "^2.10.0"
sqlparse = "^0.5.2"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "foo"
url = "https://pypi.example.org/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"
